Support relative links for images (fixes #19). The preview is updated after 300ms of idle time, reducing flicker and thrasing, and partially fixes #7.

--- a/markdown.css
+++ b/markdown.css
@@ -1,4 +1,4 @@
-html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+html { background:#fefefe; font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 
 body{
 color:#444;
